--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.4",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
