--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "css-loader": "^6.7.4",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
