--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
+    "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
