--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.4",
+    "eslint": "^8.41.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
