--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "css-loader": "^6.7.4",
     "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "prettier": "^2.8.8",
