chore: improve code formatting and linting setup
- Remove `package.json` and `package-lock.json` from `.prettierignore`
- Add `husky` and `lint-staged` to `package.json` scripts
- Add `src/**.{js,jsx}` to `lint-staged` in `package.json`

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "lint": "eslint --fix",
     "prettier": "prettier --config ./.prettierrc --write ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**.{js,jsx}": [
+      "npm run prettier",
+      "npm run lint",
+      "git add ."
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
