--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix",
-    "prettier": "prettier --config ./.prettierrc --write ."
+    "prettier": "prettier --config ./.prettierrc --write .",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "husky": {
     "hooks": {
@@ -24,6 +25,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "conventional-changelog": "^3.1.25",
+    "conventional-changelog-cli": "^2.2.2",
     "css-loader": "^6.7.4",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
