--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
     "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
   }
 }
