--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.2.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
