--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix",
     "prettier": "prettier --config ./.prettierrc --write .",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode development"
   },
   "husky": {
     "hooks": {
