--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "less": "^4.1.3",
