build: update Babel dependencies and loaders
- Add Babel dependencies for core and preset-env
- Add babel-loader dependency
- Remove css-loader version constraint

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.1.2",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "css-loader": "^6.7.4",
