--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --fix",
     "prettier": "prettier --config ./.prettierrc --write .",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "dev": "webpack-dev-server --config ./config/webpack.dev.js --mode development",
+    "dev": "webpack-dev-server --config ./config/webpack.dev.js",
+    "prod": "webpack --config ./config/webpack.prod.js",
     "build": "webpack --mode development"
   },
   "husky": {
