--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --fix",
     "prettier": "prettier --config ./.prettierrc --write .",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "start": "npm run dev",
     "dev": "webpack-dev-server --config ./config/webpack.dev.js",
     "prod": "webpack --config ./config/webpack.prod.js",
     "build": "webpack --mode development"
